Add update user endpoint
