# handler/endpoints.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"fmt"
 	"net/http"
 	"strings"
 
@@ -9,16 +8,6 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// This is just a test endpoint to get you started. Please delete this endpoint.
-// (GET /hello)
-func (s *Server) Hello(ctx echo.Context, params generated.HelloParams) error {
-
-	var resp generated.Response
-	resp.Message = fmt.Sprintf("Hello User %d", params.Id)
-	return ctx.JSON(http.StatusOK, resp)
-}
-
-// This is just a test endpoint to get you started. Please delete this endpoint.
 // (POST /user-register)
 func (s *Server) UserRegister(ctx echo.Context) error {
 	var req generated.Users
@@ -34,6 +23,7 @@ func (s *Server) UserRegister(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, resp)
 }
 
+// (POST /login)
 func (s *Server) Login(ctx echo.Context) error {
 	var req generated.LoginInput
 	if err := ctx.Bind(&req); err != nil {
@@ -46,6 +36,7 @@ func (s *Server) Login(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, loginResp)
 }
 
+// (GET /user)
 func (s *Server) GetUser(ctx echo.Context) error {
 	accessToken := extractToken(ctx)
 	userResp, err := s.Svc.GetUserByAccessToken(ctx.Request().Context(), accessToken)
@@ -55,6 +46,23 @@ func (s *Server) GetUser(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, generated.UserResponse{
 		FullName:    userResp.FullName,
 		PhoneNumber: userResp.PhoneNumber,
+	})
+}
+
+// (PUT /user)
+func (s *Server) UserUpdate(ctx echo.Context) error {
+	var req generated.UpdateUsers
+	if err := ctx.Bind(&req); err != nil {
+		return ctx.JSON(http.StatusBadRequest, echo.Map{"error": err})
+	}
+	accessToken := extractToken(ctx)
+	err := s.Svc.UpdateUser(ctx.Request().Context(), req, accessToken)
+	if err != nil {
+		return ctx.JSON(err.StatusCode, echo.Map{"error": err.Message})
+	}
+	return ctx.JSON(http.StatusOK, generated.Users{
+		FullName:    req.FullName,
+		PhoneNumber: req.PhoneNumber,
 	})
 }
 
